--- a/MacSVG Plugin Projects/macSVG Plugins/ImageElementEditor/ImageElementEditor/ImageElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/ImageElementEditor/ImageElementEditor/ImageElementEditor.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <development version="6300" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
-        <plugIn identifier="com.apple.WebKitIBPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.WebKitIBPlugin" version="11542"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ImageElementEditor">
@@ -23,7 +24,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="ykH-CG-6lc" customClass="FlippedView">
+        <customView misplaced="YES" id="ykH-CG-6lc" customClass="FlippedView">
             <rect key="frame" x="0.0" y="0.0" width="287" height="312"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
@@ -31,8 +32,8 @@
                     <rect key="frame" x="0.0" y="0.0" width="287" height="312"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Evd-Mf-Riu">
-                            <rect key="frame" x="199" y="65" width="62" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="Evd-Mf-Riu">
+                            <rect key="frame" x="199" y="90" width="62" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="0 K" id="mYA-WS-38X">
                                 <font key="font" metaFont="smallSystem"/>
@@ -40,8 +41,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="YFg-kN-Ef6">
-                            <rect key="frame" x="143" y="45" width="56" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="YFg-kN-Ef6">
+                            <rect key="frame" x="143" y="70" width="56" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="JPEG Size:" id="trL-2U-GtN">
                                 <font key="font" metaFont="smallSystem"/>
@@ -49,23 +50,20 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <slider verticalHuggingPriority="750" id="stw-JT-qeO">
-                            <rect key="frame" x="128" y="19" width="137" height="15"/>
+                        <slider verticalHuggingPriority="750" misplaced="YES" id="stw-JT-qeO">
+                            <rect key="frame" x="128" y="44" width="137" height="15"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <sliderCell key="cell" controlSize="small" state="on" alignment="left" maxValue="1" doubleValue="0.5" tickMarkPosition="above" sliderType="linear" id="Vps-Uv-uH9"/>
                             <connections>
                                 <action selector="updateImageSettings:" target="-2" id="TNh-RA-ovO"/>
                             </connections>
                         </slider>
-                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="VO8-qM-7Dr">
-                            <rect key="frame" x="20" y="106" width="244" height="5"/>
+                        <box verticalHuggingPriority="750" misplaced="YES" boxType="separator" id="VO8-qM-7Dr">
+                            <rect key="frame" x="20" y="131" width="244" height="5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <font key="titleFont" metaFont="system"/>
                         </box>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Cqh-CS-mDZ">
-                            <rect key="frame" x="144" y="65" width="55" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="Cqh-CS-mDZ">
+                            <rect key="frame" x="144" y="90" width="55" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="PNG Size:" id="PJF-4h-M5p">
                                 <font key="font" metaFont="smallSystem"/>
@@ -73,10 +71,10 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <button verticalHuggingPriority="750" id="Sdf-Cp-lYU">
-                            <rect key="frame" x="19" y="111" width="252" height="28"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="push" title="Get Image from URL" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="B6m-ht-fz0">
+                        <button verticalHuggingPriority="750" misplaced="YES" id="Sdf-Cp-lYU">
+                            <rect key="frame" x="227" y="136" width="45" height="28"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="push" title="Get" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="B6m-ht-fz0">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="smallSystem"/>
                             </buttonCell>
@@ -84,8 +82,8 @@
                                 <action selector="getImageFromURLButtonAction:" target="-2" id="lKn-zp-p4R"/>
                             </connections>
                         </button>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="TWk-Cn-A0X">
-                            <rect key="frame" x="21" y="20" width="102" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="TWk-Cn-A0X">
+                            <rect key="frame" x="21" y="45" width="102" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="JPEG Compression" id="lEn-Sr-Hjm">
                                 <font key="font" metaFont="smallSystem"/>
@@ -93,8 +91,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="OyQ-l0-PWy">
-                            <rect key="frame" x="199" y="45" width="62" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="OyQ-l0-PWy">
+                            <rect key="frame" x="199" y="70" width="62" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="0 K" id="uBx-ML-qyX">
                                 <font key="font" metaFont="smallSystem"/>
@@ -113,8 +111,8 @@
                                 <action selector="chooseFileButtonAction:" target="-2" id="wZb-DH-OYk"/>
                             </connections>
                         </button>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="fhV-Zp-Nfo">
-                            <rect key="frame" x="145" y="85" width="55" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="fhV-Zp-Nfo">
+                            <rect key="frame" x="145" y="110" width="55" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Link Size:" id="V1N-lN-O8J">
                                 <font key="font" metaFont="smallSystem"/>
@@ -122,8 +120,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="BeA-rq-dZS">
-                            <rect key="frame" x="200" y="85" width="62" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="BeA-rq-dZS">
+                            <rect key="frame" x="200" y="110" width="62" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="0 K" id="jDM-s4-79M">
                                 <font key="font" metaFont="smallSystem"/>
@@ -142,15 +140,15 @@
                                 <action selector="getClipboardButtonAction:" target="-2" id="Mtm-5e-C74"/>
                             </connections>
                         </button>
-                        <box autoresizesSubviews="NO" title="Drag image or SVG file into box" borderType="line" id="t49-ej-4W4">
+                        <box autoresizesSubviews="NO" borderType="line" title="Drag image or SVG file into box" id="t49-ej-4W4">
                             <rect key="frame" x="17" y="190" width="253" height="118"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <view key="contentView">
+                            <view key="contentView" id="kie-IT-NKg">
                                 <rect key="frame" x="1" y="1" width="251" height="102"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <webView maintainsBackForwardList="NO" id="bVG-Uj-gjR">
-                                        <rect key="frame" x="2" y="3" width="247" height="89"/>
+                                    <webView misplaced="YES" maintainsBackForwardList="NO" id="bVG-Uj-gjR">
+                                        <rect key="frame" x="1" y="1" width="249" height="100"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                         <webPreferences key="preferences" defaultFontSize="12" defaultFixedFontSize="12" plugInsEnabled="NO" javaEnabled="NO" javaScriptEnabled="NO" javaScriptCanOpenWindowsAutomatically="NO">
                                             <nil key="identifier"/>
@@ -165,11 +163,9 @@
                                     </webView>
                                 </subviews>
                             </view>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </box>
-                        <matrix verticalHuggingPriority="750" allowsEmptySelection="NO" autorecalculatesCellSize="YES" id="AJX-Hp-BQa">
-                            <rect key="frame" x="20" y="42" width="119" height="58"/>
+                        <matrix verticalHuggingPriority="750" misplaced="YES" allowsEmptySelection="NO" autorecalculatesCellSize="YES" id="AJX-Hp-BQa">
+                            <rect key="frame" x="20" y="67" width="119" height="58"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             <size key="cellSize" width="93" height="18"/>
@@ -198,14 +194,17 @@
                                 <action selector="updateImageSettings:" target="-2" id="jU5-FH-Cro"/>
                             </connections>
                         </matrix>
-                        <textField verticalHuggingPriority="750" id="ZZ7-83-aFi">
-                            <rect key="frame" x="20" y="142" width="245" height="19"/>
+                        <textField verticalHuggingPriority="750" misplaced="YES" id="ZZ7-83-aFi">
+                            <rect key="frame" x="54" y="142" width="170" height="19"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="q2D-Sl-eka">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <action selector="updateImageSettings:" target="-2" id="MWC-JN-3gj"/>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="RPc-ss-hOG">
                             <rect key="frame" x="18" y="169" width="40" height="14"/>
@@ -216,6 +215,26 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="qRk-18-LaZ">
+                            <rect key="frame" x="18" y="144" width="30" height="14"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="URL:" id="5Ra-EG-RmO">
+                                <font key="font" metaFont="smallSystem"/>
+                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <button verticalHuggingPriority="750" misplaced="YES" id="ASq-3n-Ksu">
+                            <rect key="frame" x="15" y="13" width="257" height="28"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="push" title="Set Image xlink:href Attribute" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Wnv-eE-Uza">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="smallSystem"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="setXlinkHrefButtonAction:" target="-2" id="LIS-Gq-J8K"/>
+                            </connections>
+                        </button>
                     </subviews>
                 </customView>
             </subviews>
