--- a/MacSVG Plugin Projects/macSVG Plugins/SVGElementEditor/SVGElementEditor/en.lproj/SVGElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/SVGElementEditor/SVGElementEditor/en.lproj/SVGElementEditor.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SVGElementEditor">
@@ -22,11 +23,11 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="FXx-2c-vL3" userLabel="PluginView" customClass="FlippedView">
             <rect key="frame" x="0.0" y="0.0" width="254" height="267"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView id="hMH-GL-c8d">
                     <rect key="frame" x="0.0" y="0.0" width="254" height="267"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
                         <textField verticalHuggingPriority="750" id="Msg-zE-f1Y">
                             <rect key="frame" x="118" y="84" width="57" height="19"/>
@@ -229,12 +230,9 @@ Gw
                                 <action selector="revertButtonAction:" target="-2" id="PZp-Fu-dG3"/>
                             </connections>
                         </button>
-                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="3CT-b5-edK">
+                        <box verticalHuggingPriority="750" boxType="separator" id="3CT-b5-edK">
                             <rect key="frame" x="20" y="136" width="213" height="5"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <font key="titleFont" metaFont="system"/>
                         </box>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="2DC-pY-7KX">
                             <rect key="frame" x="76" y="204" width="36" height="14"/>
@@ -281,7 +279,7 @@ Gw
                     </subviews>
                 </customView>
             </subviews>
-            <point key="canvasLocation" x="349" y="345.5"/>
+            <point key="canvasLocation" x="66" y="145"/>
         </customView>
     </objects>
 </document>
